--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "fs": "^0.0.1-security",
     "mongoose": "^7.8.2",
+    "multer": "^1.4.5-lts.1",
     "socket.io": "^4.7.2"
   },
   "devDependencies": {
