--- a/backend/package.json
+++ b/backend/package.json
@@ -16,11 +16,12 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
+    "dotenv": "^16.4.7",
     "express": "^4.21.1",
     "fs": "^0.0.1-security",
     "mongoose": "^7.8.2",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.16",
     "socket.io": "^4.7.2"
   },
   "devDependencies": {
